# palletizing_project

./: .gitattributes  .gitignore
data/: 箱型主数据.txt
data/测试订单/订单1/: box_1_execution_data.json  box_2_execution_data.json  box_3_execution_data.json  box_4_execution_data.json  box_5_execution_data.json  box_6_execution_data.json  box_7_execution_data.json  box_8_execution_data.json
data/测试订单/订单10/: box_1_execution_data.json  box_2_execution_data.json  box_3_execution_data.json
data/测试订单/订单11/: box_1_execution_data.json  box_2_execution_data.json  box_3_execution_data.json
data/测试订单/订单2/: box_10_execution_data.json  box_1_execution_data.json  box_2_execution_data.json  box_3_execution_data.json  box_4_execution_data.json  box_5_execution_data.json  box_6_execution_data.json  box_7_execution_data.json  box_8_execution_data.json  box_9_execution_data.json
data/测试订单/订单3/: box_1_execution_data.json  box_2_execution_data.json  box_3_execution_data.json
data/测试订单/订单4/: box_10_execution_data.json  box_11_execution_data.json  box_12_execution_data.json  box_13_execution_data.json  box_14_execution_data.json  box_15_execution_data.json  box_16_execution_data.json  box_17_execution_data.json  box_18_execution_data.json  box_19_execution_data.json  box_1_execution_data.json  box_20_execution_data.json  box_21_execution_data.json  box_22_execution_data.json  box_23_execution_data.json  box_24_execution_data.json  box_25_execution_data.json  box_26_execution_data.json  box_2_execution_data.json  box_3_execution_data.json  box_4_execution_data.json  box_5_execution_data.json  box_6_execution_data.json  box_7_execution_data.json  box_8_execution_data.json  box_9_execution_data.json
data/测试订单/订单5/: box_10_execution_data.json  box_1_execution_data.json  box_2_execution_data.json  box_3_execution_data.json  box_4_execution_data.json  box_5_execution_data.json  box_6_execution_data.json  box_7_execution_data.json  box_8_execution_data.json  box_9_execution_data.json
data/测试订单/订单6/: box_1_execution_data.json  box_2_execution_data.json  box_3_execution_data.json  box_4_execution_data.json  box_5_execution_data.json
data/测试订单/订单7/: box_1_execution_data.json  box_2_execution_data.json
data/测试订单/订单8/: box_1_execution_data.json  box_2_execution_data.json
data/测试订单/订单9/: box_1_execution_data.json  box_2_execution_data.json
isaac_sim_assets/: assembly.usd  assembly_isaac_sim.usd  change.usda
isaac_sim_assets/scripts/: close_surface_gripper.py  isaac_sim_bridge.py  suction_cmd_subscriber.py  surface_gripper.py
isaac_sim_assets/urdf/KUKA-KR-50-R2500-E/robot/: robot.usd
isaac_sim_assets/urdf/env_description/: CMakeLists.txt
isaac_sim_assets/urdf/env_description/meshes/: zone1.STL  zone2.STL  zoneA.STL
isaac_sim_assets/urdf_isaac_sim/: assembly_isaac_sim.urdf
isaac_sim_assets/urdf_isaac_sim/assembly_isaac_sim/: assembly_isaac_sim.usd
isaac_sim_assets/urdf_isaac_sim/assembly_isaac_sim/configuration/: assembly_isaac_sim_base.usd  assembly_isaac_sim_physics.usd  assembly_isaac_sim_robot.usd  assembly_isaac_sim_sensor.usd
isaac_sim_assets/urdf_isaac_sim/ee_description/: CMakeLists.txt  package.xml
isaac_sim_assets/urdf_isaac_sim/ee_description/launch/: display.launch
isaac_sim_assets/urdf_isaac_sim/ee_description/meshes/: ee.STL  ee_base_link.STL
isaac_sim_assets/urdf_isaac_sim/ee_description/urdf/: ee_description.urdf
isaac_sim_assets/urdf_isaac_sim/env_description/: CMakeLists.txt  package.xml
isaac_sim_assets/urdf_isaac_sim/env_description/launch/: display.launch
isaac_sim_assets/urdf_isaac_sim/env_description/meshes/: AGV.STL  cabinet.STL  env_base_link.STL  vision_system.STL  zone3.STL  zone4.STL  zoneB.STL
isaac_sim_assets/urdf_isaac_sim/env_description/urdf/: env_description.urdf
isaac_sim_assets/urdf_isaac_sim/kuka_description/: CMakeLists.txt  package.xml
isaac_sim_assets/urdf_isaac_sim/kuka_description/meshes/collision/: link_1.stl
isaac_sim_assets/urdf_isaac_sim/kuka_description/meshes/visual/: base_link.stl  link_1.stl
isaac_sim_assets/urdf_isaac_sim/kuka_description/urdf/: assembly_moveit.xacro  kuka_description.urdf
isaac_sim_assets/urdf_isaac_sim/kuka_description/urdf/kuka_description/: kuka_description.usd
isaac_sim_assets/urdf_isaac_sim/kuka_description/urdf/kuka_description/configuration/: kuka_description_base.usd  kuka_description_physics.usd  kuka_description_robot.usd  kuka_description_sensor.usd
isaac_sim_assets/usd_models/ee_description/: ee_description.usd
isaac_sim_assets/usd_models/ee_description/configuration/: ee_description_base.usd  ee_description_physics.usd  ee_description_robot.usd
isaac_sim_assets/usd_models/env_description/configuration/: env_description_base.usd  env_description_physics.usd  env_description_robot.usd  env_description_sensor.usd
kuka_ws/: assembly_isaac_sim.urdf
kuka_ws/src/KUKA-KR-50-R2500-E/: robot.urdf
kuka_ws/src/ee_description/: CMakeLists.txt  package.xml
kuka_ws/src/ee_description/launch/: display.launch  gazebo.launch
kuka_ws/src/ee_description/urdf/: ee_description.csv
kuka_ws/src/env_description/: package.xml
kuka_ws/src/env_description/launch/: gazebo.launch
kuka_ws/src/env_description/meshes/: guardrail.STL  tray.STL
kuka_ws/src/env_description/urdf/: env_description.csv  env_description.urdf
kuka_ws/src/kuka_control/: CMakeLists.txt  package.xml
kuka_ws/src/kuka_control/launch/: pallet_pipeline.launch.py  suction_manipulator.launch.py
kuka_ws/src/kuka_control/src/: arm_controller_node.cpp  box_creator.cpp  palletizing_server.cpp  suction_manipulator.cpp  task_manager_client.cpp  task_publisher_client.cpp
kuka_ws/src/kuka_control/test/: test_planner_validation.py
kuka_ws/src/kuka_interfaces/: CMakeLists.txt  package.xml
kuka_ws/src/kuka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kuka_ws/src/palletizing_brain/: package.xml  setup.cfg  setup.py
kuka_ws/src/palletizing_interfaces/: CMakeLists.txt  package.xml
kuka_ws/src/palletizing_interfaces/action/: BoxTask.action
kuka_ws/src/palletizing_interfaces/srv/: GetTask.srv
(+44 files in other folders)
