<?xml version="1.0"?>
<package format="3">
  <name>env_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for env_description</p>
    <p>This package contains configuration data, 3D models and launch files
for env_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时依赖（ROS 2 中的对应包） -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <!-- Gazebo 在 ROS 2 中通常使用 gazebo_ros_pkgs，此处保留原名但可能需要调整 -->
  <exec_depend>gazebo</exec_depend>

  <!-- 如果 launch 文件需要 ros2 launch 命令，可添加下面依赖（可选） -->
  <!-- <exec_depend>ros2launch</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>